backend/src/public/css/components/_fuse-select.scss
.fuse-select {
  height: 142.5px;
  overflow: hidden;
}

.fuse-select-options {
  @extend .overflow-auto;
  @extend .my-1;
  @extend .d-none;
  @extend .hide-scrollbar;
  max-height: 25vh;
  cursor: pointer;

  &.active {
    @extend .d-block;
  }

  .fuse-select-option {
    @extend .rounded;
    padding: 0 13px;
    &.previous-edit {
      .fuse-select-option-text {
        color: $orange !important;
      }
    }
    &.previous-edit {
      &.fuse-select-option-text {
        b {
          color: $orange !important;
        }
      }
    }

    .fuse-select-option-text {
      @extend .text-dark;
      @extend .text-truncate;
    }

    &:hover {
      @extend .bg-primary;
      &.previous-edit {
        background-color: $orange !important;
        .fuse-select-option-text {
          @extend .text-light;
        }
      }
      .fuse-select-option-text {
        @extend .text-light;
      }
    }
  }
}

